# incolume.py.prospect.rpa

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
coverage_report/: cov.xml
coverage_report/html/: d_d1a4df813cae2af2___init___py.html  index.html  status.json
incolume/py/prospect/bot/: reservapr.py
incolume/py/prospect/rpa/: __init__.py  bot_reservapr.py  bot_reservapr0.py  bot_reservapr1.py  bot_reservapr2.py  bot_reservapr3.py  bot_reservapr4.py  bot_reservapr5.py  bot_reservapr6.py  bot_reservapr7.py  bot_reservapr9.py  reservapr.py  tratativa_reservapr0.py  tratativa_reservapr1.py  version.txt
incolume/py/prospect/rpa/gui/: __init__.py  screen1.py  screen10.py  screen2.py  screen3.py  screen4.py  screen5.py  screen6.py  screen7.py  screen8.py  screen9.py
incolume/py/prospect/rpa/schedule/: __init__.py  example_00.py  example_01.py  example_02.py  example_03.py  example_04.py  example_05.py  example_06.py  example_07.py  example_08.py  example_09.py  example_10.py  example_11.py  example_12.py  example_13.py  example_14.py  example_15.py  example_16.py  example_17.py  example_18.py  example_19.py  example_20.py  example_21.py  example_22.py  example_23_async.py  example_24_async.py  example_25_async.py  pokedolar.py  pokedolar_mine.py
incolume/py/prospect/rpa/subprocesses/: __init__.py  subprocess01.py
tests/: test_my_application.py  test_package.py
